# ResearchProjectTemplate

./: CLAUDE-global-template.md  CLAUDE-root-fork.md  CLAUDE-template-fork.md  CLAUDE-template.md  FORK-WORKFLOW.md  README-template.md  README.md  create_project.sh
ProjectExample/: .gitattributes  .mcp.json  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
ProjectExample/.claude/: settings.local.json
ProjectExample/.claude/agents/: code-reviewer.md  note-checker.md  report-checker.md  results-summarizer.md  review-doc-commit.md  unit-tester.md
ProjectExample/.claude/draft-reviewer/: REVIEWER.md
ProjectExample/.claude/draft-reviewer/reviewers/: argument-logic.md  citation-checker.md  code-paper-consistency.md  consistency-checker.md  mathematical.md  proofreader.md  writing-clarity.md
ProjectExample/.claude/instructions/: lessons.md
ProjectExample/.claude/skills/: method-tracker  mistral-pdf-to-markdown  paper-reader  research-junshi  zotero-paper-reader
ProjectExample/.claude/skills/method-tracker/: SKILL.md
ProjectExample/.claude/skills/mistral-pdf-to-markdown/: SKILL.md  reference.md
ProjectExample/.claude/skills/mistral-pdf-to-markdown/scripts/: convert_pdf_to_markdown.py
ProjectExample/.claude/skills/pdftotext/: SKILL.md
ProjectExample/.claude/skills/progress-tracker/: SKILL.md
ProjectExample/.claude/skills/research-junshi/: SKILL.md
ProjectExample/.claude/skills/work-summary/: SKILL.md
ProjectExample/.claude/skills/zotero-paper-reader/: SKILL.md
ProjectExample/.githooks/: commit-msg  pre-commit
ProjectExample/Reports/: STYLE-GUIDE.md
(+10 files in other folders)
